<resources>
    <string name="app_name" translatable="false">WeClean</string>
    <string name="slogan" translatable="false">Make the Netherlands green again</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_achievements">Achievements</string>

    <string name="title_home">Home</string>
    <string name="title_map">Littering Map</string>
    <string name="title_profile">Profile</string>
    <string name="title_achievements">Achievements</string>
    <string name="title_add">Add Entry</string>
    <string name="title_events">Events</string>
    <string name="title_event">Event</string>

    <string name="button_add">Add</string>
    <string name="button_join">Join</string>
    <string name="button_create">Create</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="button_delete">Delete</string>
    <string name="button_manage">Manage</string>
    <string name="button_leave">Leave</string>
    <string name="button_add_littering">Add Littering Entry</string>
    <string name="button_log_out">Log out</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="button_communities">View Communities</string>
    <string name="button_logout_account">Logout Account</string>
    <string name="button_save_changes">Save Changes</string>
    <string name="button_edit_community_name">Edit</string>
    <string name="button_copy">Copy</string>
    <string name="button_change">Change</string>

    <string name="label_email">Email</string>
    <string name="label_brith_date">Date of Birth</string>
    <string name="label_country_region">Country/Region</string>
    <string name="label_location">Location</string>
    <string name="label_communities">Communities</string>
    <string name="label_select_communities">Select Community</string>
    <string name="label_add_tags">Add Tags</string>
    <string name="label_password">Password</string>
    <string name="label_description">Description</string>
    <string name="label_littering_data">Littering Entry</string>
    <string name="label_username">Username</string>
    <string name="label_littering_entries">Cleanups</string>
    <string name="label_contact_email">Contact Email</string>
    <string name="label_confirm_contact_email">Confirm Contact Email</string>
    <string name="label_events_joined">Joined Events</string>
    <string name="label_admin">Admin</string>

    <string name="hint_tag">Tag</string>
    <string name="hint_location">Location</string>
    <string name="hint_password">New Password</string>
    <string name="hint_password_repeat">Repeat Password</string>
    <string name="hint_description">Description of the littering location…</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_out">Remove Sign Up</string>
    <string name="action_log_in_short">Log in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="no_account">"No account yet? Sign up!"</string>
    <string name="yes_account">"Already have an account? Log in!"</string>
    <string name="forgot_password">"Forgot your password?"</string>
    <string name="back_to_login">"Go back to login page"</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_event_popup">EventPopup</string>
    <string name="forgot_password_question">Forgot your password?</string>
    <string name="forgot_password_info">Fill in your email to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="date_time_format">%20d/%02d/%d %02d:%02d</string>
    <string name="date_format">%02d/%02d/%d</string>

    <string name="title_cCommunity">Create Community</string>
    <string name="label_add_cName">Enter community name</string>
    <string name="hint_add_cName">eg. municipality, district, organisation name</string>
    <string name="label_add_cEmail">Email</string>
    <string name="hint_add_cEmail">Enter community\'s email address</string>
    <string name="label_add_cLocation">Location</string>
    <string name="hint_add_cLocation">Where is the community based in?</string>

    <!-- Events -->
    <string name="button_upcoming_events">Upcoming events</string>
    <string name="event_name_table">Name</string>
    <string name="event_date_table">Date</string>
    <string name="event_time_table">Time</string>
    <string name="event_location_table">Location</string>
    <string name="create_event">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Date and Time</string>
    <string name="description_event">Description of the cleanup event</string>

    <string name="button_remove_members">REMOVE</string>
    <string name="title_manage_community">Manage Community</string>
    <string name="label_community_code">Community Code</string>
    <string name="hint_community_code">V347835F844V</string>
    <string name="title_activity_event_table">EventTable</string>
    <string name="city">City</string>
    <string name="homepage">Homepage</string>
    <string name="number_of_people_signed_up">number of people signed up</string>
    <string name="sign_up">Sign up</string>
    <string name="_00_00_23_59">00:00-23:59</string>
    <string name="address">address</string>
    <string name="desc">desc</string>
    <string name="places_that_need_clean_up">places that need a clean up</string>
    <string name="recently_cleaned_up_locations">Recently cleaned up locations</string>
    <string name="members">Members</string>
    <string name="change_community_name">Change Community Name</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>