<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/house_solid"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map_location_solid"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/plus_solid"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_achievements"
        android:icon="@drawable/trophy_solid"
        android:title="@string/title_achievements" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user_solid"
        android:title="@string/title_profile" />

</menu>