<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileInfo" >

    <TextView
        style="@style/Widget.Theme.WeClean.ScreenTitle"
        android:id="@+id/screen_title"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_profile" />

    <TextView
        style="@style/Widget.Theme.WeClean.SectionLabel"
        android:id="@+id/email_label"
        android:layout_marginTop="20dp"
        android:text="@string/label_email" />

    <TextView
        style="@style/Widget.Theme.WeClean.Text"
        android:paddingStart="15dp"
        android:id="@+id/email" />

    <TextView
        style="@style/Widget.Theme.WeClean.SectionLabel"
        android:id="@+id/birthdate_label"
        android:text="@string/label_username" />

    <TextView
        style="@style/Widget.Theme.WeClean.Text"
        android:paddingStart="15dp"
        android:id="@+id/username" />

    <TextView
        style="@style/Widget.Theme.WeClean.SectionLabel"
        android:id="@+id/region_label"
        android:text="@string/label_country_region" />

    <TextView
        style="@style/Widget.Theme.WeClean.Text"
        android:paddingStart="15dp"
        android:id="@+id/region" />

    <TextView
        style="@style/Widget.Theme.WeClean.SectionLabel"
        android:id="@+id/phone_label"
        android:text="@string/label_littering_entries" />

    <TextView
        style="@style/Widget.Theme.WeClean.Text"
        android:paddingStart="15dp"
        android:id="@+id/littering_entries" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/view_communities"
        style="@style/Widget.Theme.WeClean.Button"
        android:text="@string/button_communities"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp" >

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Theme.WeClean.Button"
            android:id="@+id/edit_button"
            android:text="@string/button_edit_profile"
            android:layout_gravity="bottom"
            android:layout_marginEnd="40dp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Theme.WeClean.ButtonRed"
            android:id="@+id/logout_button"
            android:text="@string/button_log_out"
            android:layout_gravity="bottom" />
    </LinearLayout>

</LinearLayout>