<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_marginTop="130dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="50sp"
        android:fontFamily="@font/aclonica"
        app:fontFamily="@font/aclonica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/Widget.Theme.WeClean.TextInput"
        android:id="@+id/registerUsername"
        android:layout_marginTop="280dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:shadowColor="@color/blue_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerPassword"
        style="@style/Widget.Theme.WeClean.TextInput"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_up_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsername" />

    <EditText
        android:id="@+id/confirmPassword"
        style="@style/Widget.Theme.WeClean.TextInput"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/prompt_confirm_password"
        android:hint="@string/prompt_confirm_password"
        android:imeActionLabel="@string/action_sign_up_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Widget.Theme.WeClean.Button"
        android:id="@+id/login"
        android:layout_marginTop="20dp"
        android:text="@string/action_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>