<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileEdit">

    <TextView
        style="@style/Widget.Theme.WeClean.ScreenTitle"
        android:id="@+id/edit_button"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="left"
        android:text="@string/button_edit_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/Widget.Theme.WeClean.SectionLabel"
        android:id="@+id/email_label"
        android:layout_marginTop="20dp"
        android:text="@string/label_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_button"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        style="@style/Widget.Theme.WeClean.TextInput"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/email_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/Widget.Theme.WeClean.SectionLabel"
        android:id="@+id/birthdate_label"
        android:text="@string/label_brith_date"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/Widget.Theme.WeClean.TextInput"
        android:inputType="date"
        android:id="@+id/birthdate"
        app:layout_constraintTop_toBottomOf="@+id/birthdate_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/Widget.Theme.WeClean.SectionLabel"
        android:id="@+id/region_label"
        android:inputType="textPostalAddress"
        android:text="@string/label_country_region"
        app:layout_constraintTop_toBottomOf="@+id/birthdate"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        style="@style/Widget.Theme.WeClean.TextInput"
        android:id="@+id/region"
        android:autofillHints="postalAddress"
        app:layout_constraintTop_toBottomOf="@+id/region_label"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Widget.Theme.WeClean.ButtonRed"
        android:id="@+id/delete_button"
        android:layout_marginTop="30dp"
        android:layout_width="170dp"
        android:text="@string/button_delete_account"
        app:layout_constraintTop_toBottomOf="@+id/region"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Theme.WeClean.ButtonRed"
            android:id="@+id/cancel_button"
            android:layout_marginEnd="25dp"
            android:layout_marginVertical="8dp"
            android:layout_width="100dp"
            android:text="@string/button_cancel" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Theme.WeClean.Button"
            android:id="@+id/confirm_button"
            android:layout_marginStart="25dp"
            android:layout_marginVertical="8dp"
            android:layout_width="100dp"
            android:text="@string/button_confirm" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
