<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ManageCommunity">

    <TextView
        style="@style/Widget.Theme.WeClean.ScreenTitle"
        android:id="@+id/screen_title"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/title_profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/community_name_container"
        app:layout_constraintTop_toBottomOf="@+id/screen_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/community_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="34sp"
            android:paddingEnd="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/name_edit_button"
            style="@style/Widget.Theme.WeClean.ButtonWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_community_name" />

    </LinearLayout>

    <TextView
        style="@style/Widget.Theme.WeClean.SectionLabel"
        android:id="@+id/community_code_label"
        app:layout_constraintTop_toBottomOf="@+id/community_name_container"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/label_community_code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/community_code_container"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/community_code_label"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/community_code_text"
            style="@style/Widget.Theme.WeClean.TextInput"
            android:layout_width="wrap_content"
            android:hint="@string/hint_community_code"
            android:layout_marginBottom="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Theme.WeClean.Button"
            android:id="@+id/code_copy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_copy" />

    </LinearLayout>

    <TextView
        style="@style/Widget.Theme.WeClean.ListHeader"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/members_label"
        android:text="@string/members"
        app:layout_constraintTop_toBottomOf="@+id/community_code_container"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/member_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/members_label"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>